--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@
 
 body{
     background: rgb(127,130,116);
+    /* width: 100%;
+    height: 100%; */
+
 }
 
 #gameContainer{
@@ -51,5 +54,34 @@ body{
     font-family: coveredByYourGrace;
 }
 
+#detail{
+    margin:0 0 0 0;
+    position: fixed;
+    text-align: center;
+    bottom: 0;
+    left: 0;
+    width:100%;
+    color: rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
+.mobileCtr{
+    margin: 20px;
+    /* width:100%; */
+    text-align: center;
+    
+}
 
+.ctrBtn{
+    width: 10%;
+    height: 5%;
+    /* margin-right: 30px; */
+    /* word-spacing: 100px; */
+    font-size: 200%;
+    font-family: bigShoulderOne;
+    border-color: black;
+    border-radius: 10px;
+    border-width: 5px;
+    background-color: rgb(240, 245, 243);
+    visibility: visible;
+}
