--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ body{
 .ctrBtn{
     width: 10%;
     height: 5%;
+    text-align: center;
     /* margin-right: 30px; */
     /* word-spacing: 100px; */
     font-size: 200%;
